book/kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book
  labels:
    app: book
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book
  template:
    metadata:
      labels:
        app: book
    spec:
      containers:
      - name: book
        image: docker.io/robinfoe/tsm-book
        ports:
        - containerPort: 8080
        command: ["java"]
        args: ["-jar", "-Dspring.config.location=file:/app/config/app.properties", "book.jar"]
        volumeMounts:
        - name: book-config
          mountPath: /app/config/
      volumes:
      - name: book-config
        configMap:
          name: book-config
