book/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book
  labels:
    app: book
spec:
  ports:
    - port: 8080
      name: book-port
  selector:
    app: book
