book/kubernetes/book-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: book-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "book.app.fry.tsm.cloud-no.de"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: book-gw-vs
spec:
  hosts:
  - "book.app.fry.tsm.cloud-no.de"
  gateways:
  - book-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: book
        port:
          number: 8080
